# gemm-n8-debug

./: .pre-commit-config.yaml  CMakeLists.txt  gemm-n8.cuh  gemm_nt.py  gemm_sm89.h  main.cu  run_build.sh  utils.hpp
cmake/: select_compute_arch.cmake
include/: common.h  cuda_fp8.h  gemm_sm89.h
tl_templates/cuda/: common.h  copy.h  copy_sm90.h  debug.h  gemm.h  gemm_sm70.h  gemm_sm80.h  gemm_sm89.h  gemm_sm90.h  ldsm.h  reduce.h  threadblock_swizzle.h
